Creating listing policies endpoint
