# design/types.go
@@ -38,3 +38,27 @@ var UnlockRequest = Type("UnlockRequest", func() {
 	Field(3, "version", String, "Policy version.")
 	Required("group", "policyName", "version")
 })
+
+var Policy = Type("Policy", func() {
+	Field(1, "policyName", String, "policy name")
+	Field(2, "group", String, "policy group")
+	Field(3, "version", String, "policy version")
+	Field(4, "rego", String, "policy rego code")
+	Field(5, "data", String, "policy data")
+	Field(6, "dataConfig", String, "policy data config")
+	Field(7, "locked", Boolean, "if it true gives locked status on the policy")
+	Field(8, "lastUpdate", Int64, "Last update (timestamp).")
+	Required("group", "policyName", "version", "locked", "lastUpdate")
+})
+
+var PoliciesRequest = Type("PoliciesRequest", func() {
+	Field(1, "locked", Boolean)
+	Field(2, "rego", Boolean)
+	Field(3, "data", Boolean)
+	Field(4, "dataConfig", Boolean)
+})
+
+var PoliciesResult = Type("PoliciesResult", func() {
+	Field(1, "policies", ArrayOf(Policy), "policy list")
+	Required("policies")
+})
