# gen/http/cli/policy/cli.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.12.1, DO NOT EDIT.
+// Code generated by goa v3.12.3, DO NOT EDIT.
 //
 // policy HTTP client CLI support package
 //
@@ -24,14 +24,14 @@ import (
 //	command (subcommand1|subcommand2|...)
 func UsageCommands() string {
 	return `health (liveness|readiness)
-policy (evaluate|lock|unlock)
+policy (evaluate|lock|unlock|list-policies)
 `
 }
 
 // UsageExamples produces an example of a valid invocation of the CLI tool.
 func UsageExamples() string {
 	return os.Args[0] + ` health liveness` + "\n" +
-		os.Args[0] + ` policy evaluate --body "Ipsum nihil quo." --group "example" --policy-name "example" --version "1.0" --evaluation-id "Aut id odio." --ttl 1804438149079407927` + "\n" +
+		os.Args[0] + ` policy evaluate --body "Quibusdam ab repellendus in illum." --group "example" --policy-name "example" --version "1.0" --evaluation-id "Nihil repudiandae dolore quod sunt aut." --ttl 4633716418015214972` + "\n" +
 		""
 }
 
@@ -70,6 +70,12 @@ func ParseEndpoint(
 		policyUnlockGroupFlag      = policyUnlockFlags.String("group", "REQUIRED", "Policy group.")
 		policyUnlockPolicyNameFlag = policyUnlockFlags.String("policy-name", "REQUIRED", "Policy name.")
 		policyUnlockVersionFlag    = policyUnlockFlags.String("version", "REQUIRED", "Policy version.")
+
+		policyListPoliciesFlags          = flag.NewFlagSet("list-policies", flag.ExitOnError)
+		policyListPoliciesLockedFlag     = policyListPoliciesFlags.String("locked", "", "")
+		policyListPoliciesRegoFlag       = policyListPoliciesFlags.String("rego", "", "")
+		policyListPoliciesDataFlag       = policyListPoliciesFlags.String("data", "", "")
+		policyListPoliciesDataConfigFlag = policyListPoliciesFlags.String("data-config", "", "")
 	)
 	healthFlags.Usage = healthUsage
 	healthLivenessFlags.Usage = healthLivenessUsage
@@ -79,6 +85,7 @@ func ParseEndpoint(
 	policyEvaluateFlags.Usage = policyEvaluateUsage
 	policyLockFlags.Usage = policyLockUsage
 	policyUnlockFlags.Usage = policyUnlockUsage
+	policyListPoliciesFlags.Usage = policyListPoliciesUsage
 
 	if err := flag.CommandLine.Parse(os.Args[1:]); err != nil {
 		return nil, nil, err
@@ -135,6 +142,9 @@ func ParseEndpoint(
 			case "unlock":
 				epf = policyUnlockFlags
 
+			case "list-policies":
+				epf = policyListPoliciesFlags
+
 			}
 
 		}
@@ -179,6 +189,9 @@ func ParseEndpoint(
 			case "unlock":
 				endpoint = c.Unlock()
 				data, err = policyc.BuildUnlockPayload(*policyUnlockGroupFlag, *policyUnlockPolicyNameFlag, *policyUnlockVersionFlag)
+			case "list-policies":
+				endpoint = c.ListPolicies()
+				data, err = policyc.BuildListPoliciesPayload(*policyListPoliciesLockedFlag, *policyListPoliciesRegoFlag, *policyListPoliciesDataFlag, *policyListPoliciesDataConfigFlag)
 			}
 		}
 	}
@@ -233,6 +246,7 @@ COMMAND:
     evaluate: Evaluate executes a policy with the given 'data' as input.
     lock: Lock a policy so that it cannot be evaluated.
     unlock: Unlock a policy so it can be evaluated again.
+    list-policies: Listing all policies
 
 Additional help:
     %[1]s policy COMMAND --help
@@ -250,7 +264,7 @@ Evaluate executes a policy with the given 'data' as input.
     -ttl INT: 
 
 Example:
-    %[1]s policy evaluate --body "Ipsum nihil quo." --group "example" --policy-name "example" --version "1.0" --evaluation-id "Aut id odio." --ttl 1804438149079407927
+    %[1]s policy evaluate --body "Quibusdam ab repellendus in illum." --group "example" --policy-name "example" --version "1.0" --evaluation-id "Nihil repudiandae dolore quod sunt aut." --ttl 4633716418015214972
 `, os.Args[0])
 }
 
@@ -263,7 +277,7 @@ Lock a policy so that it cannot be evaluated.
     -version STRING: Policy version.
 
 Example:
-    %[1]s policy lock --group "Repudiandae dolore quod." --policy-name "Aut ut fuga quae eius minus." --version "Architecto quibusdam ab."
+    %[1]s policy lock --group "Aliquam atque voluptatum ut dolorem." --policy-name "Aut facere veniam repudiandae id." --version "Aut minus alias."
 `, os.Args[0])
 }
 
@@ -276,6 +290,20 @@ Unlock a policy so it can be evaluated again.
     -version STRING: Policy version.
 
 Example:
-    %[1]s policy unlock --group "Omnis quasi aut consequuntur." --policy-name "Tempore minus." --version "Quis quos qui earum velit illum."
+    %[1]s policy unlock --group "Aut voluptas." --policy-name "Sint nam voluptatem ea consequatur similique et." --version "Non mollitia nesciunt impedit facere."
+`, os.Args[0])
+}
+
+func policyListPoliciesUsage() {
+	fmt.Fprintf(os.Stderr, `%[1]s [flags] policy list-policies -locked BOOL -rego BOOL -data BOOL -data-config BOOL
+
+Listing all policies
+    -locked BOOL: 
+    -rego BOOL: 
+    -data BOOL: 
+    -data-config BOOL: 
+
+Example:
+    %[1]s policy list-policies --locked false --rego true --data false --data-config false
 `, os.Args[0])
 }
