# gen/http/policy/server/server.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.12.1, DO NOT EDIT.
+// Code generated by goa v3.12.3, DO NOT EDIT.
 //
 // policy HTTP server
 //
@@ -18,10 +18,11 @@ import (
 
 // Server lists the policy service endpoint HTTP handlers.
 type Server struct {
-	Mounts   []*MountPoint
-	Evaluate http.Handler
-	Lock     http.Handler
-	Unlock   http.Handler
+	Mounts       []*MountPoint
+	Evaluate     http.Handler
+	Lock         http.Handler
+	Unlock       http.Handler
+	ListPolicies http.Handler
 }
 
 // MountPoint holds information about the mounted endpoints.
@@ -56,10 +57,12 @@ func New(
 			{"Evaluate", "POST", "/policy/{group}/{policyName}/{version}/evaluation"},
 			{"Lock", "POST", "/policy/{group}/{policyName}/{version}/lock"},
 			{"Unlock", "DELETE", "/policy/{group}/{policyName}/{version}/lock"},
+			{"ListPolicies", "GET", "/v1/policies"},
 		},
-		Evaluate: NewEvaluateHandler(e.Evaluate, mux, decoder, encoder, errhandler, formatter),
-		Lock:     NewLockHandler(e.Lock, mux, decoder, encoder, errhandler, formatter),
-		Unlock:   NewUnlockHandler(e.Unlock, mux, decoder, encoder, errhandler, formatter),
+		Evaluate:     NewEvaluateHandler(e.Evaluate, mux, decoder, encoder, errhandler, formatter),
+		Lock:         NewLockHandler(e.Lock, mux, decoder, encoder, errhandler, formatter),
+		Unlock:       NewUnlockHandler(e.Unlock, mux, decoder, encoder, errhandler, formatter),
+		ListPolicies: NewListPoliciesHandler(e.ListPolicies, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
@@ -71,6 +74,7 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.Evaluate = m(s.Evaluate)
 	s.Lock = m(s.Lock)
 	s.Unlock = m(s.Unlock)
+	s.ListPolicies = m(s.ListPolicies)
 }
 
 // MethodNames returns the methods served.
@@ -81,6 +85,7 @@ func Mount(mux goahttp.Muxer, h *Server) {
 	MountEvaluateHandler(mux, h.Evaluate)
 	MountLockHandler(mux, h.Lock)
 	MountUnlockHandler(mux, h.Unlock)
+	MountListPoliciesHandler(mux, h.ListPolicies)
 }
 
 // Mount configures the mux to serve the policy endpoints.
@@ -222,6 +227,57 @@ func NewUnlockHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "Unlock")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "policy")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountListPoliciesHandler configures the mux to serve the "policy" service
+// "ListPolicies" endpoint.
+func MountListPoliciesHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/v1/policies", f)
+}
+
+// NewListPoliciesHandler creates a HTTP handler which loads the HTTP request
+// and calls the "policy" service "ListPolicies" endpoint.
+func NewListPoliciesHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeListPoliciesRequest(mux, decoder)
+		encodeResponse = EncodeListPoliciesResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "ListPolicies")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "policy")
 		payload, err := decodeRequest(r)
 		if err != nil {
