# gen/http/policy/server/types.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.12.1, DO NOT EDIT.
+// Code generated by goa v3.12.3, DO NOT EDIT.
 //
 // policy HTTP server types
 //
@@ -10,6 +10,48 @@ package server
 import (
 	policy "gitlab.eclipse.org/eclipse/xfsc/tsa/policy/gen/policy"
 )
+
+// ListPoliciesResponseBody is the type of the "policy" service "ListPolicies"
+// endpoint HTTP response body.
+type ListPoliciesResponseBody struct {
+	// policy list
+	Policies []*PolicyResponseBody `form:"policies" json:"policies" xml:"policies"`
+}
+
+// PolicyResponseBody is used to define fields on response body types.
+type PolicyResponseBody struct {
+	// policy name
+	PolicyName string `form:"policyName" json:"policyName" xml:"policyName"`
+	// policy group
+	Group string `form:"group" json:"group" xml:"group"`
+	// policy version
+	Version string `form:"version" json:"version" xml:"version"`
+	// policy rego code
+	Rego *string `form:"rego,omitempty" json:"rego,omitempty" xml:"rego,omitempty"`
+	// policy data
+	Data *string `form:"data,omitempty" json:"data,omitempty" xml:"data,omitempty"`
+	// policy data config
+	DataConfig *string `form:"dataConfig,omitempty" json:"dataConfig,omitempty" xml:"dataConfig,omitempty"`
+	// if it true gives locked status on the policy
+	Locked bool `form:"locked" json:"locked" xml:"locked"`
+	// Last update (timestamp).
+	LastUpdate int64 `form:"lastUpdate" json:"lastUpdate" xml:"lastUpdate"`
+}
+
+// NewListPoliciesResponseBody builds the HTTP response body from the result of
+// the "ListPolicies" endpoint of the "policy" service.
+func NewListPoliciesResponseBody(res *policy.PoliciesResult) *ListPoliciesResponseBody {
+	body := &ListPoliciesResponseBody{}
+	if res.Policies != nil {
+		body.Policies = make([]*PolicyResponseBody, len(res.Policies))
+		for i, val := range res.Policies {
+			body.Policies[i] = marshalPolicyPolicyToPolicyResponseBody(val)
+		}
+	} else {
+		body.Policies = []*PolicyResponseBody{}
+	}
+	return body
+}
 
 // NewEvaluateRequest builds a policy service Evaluate endpoint payload.
 func NewEvaluateRequest(body any, group string, policyName string, version string, evaluationID *string, ttl *int) *policy.EvaluateRequest {
@@ -42,6 +84,18 @@ func NewUnlockRequest(group string, policyName string, version string) *policy.U
 	v.Group = group
 	v.PolicyName = policyName
 	v.Version = version
+
+	return v
+}
+
+// NewListPoliciesPoliciesRequest builds a policy service ListPolicies endpoint
+// payload.
+func NewListPoliciesPoliciesRequest(locked *bool, rego *bool, data *bool, dataConfig *bool) *policy.PoliciesRequest {
+	v := &policy.PoliciesRequest{}
+	v.Locked = locked
+	v.Rego = rego
+	v.Data = data
+	v.DataConfig = dataConfig
 
 	return v
 }
