# gen/policy/endpoints.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.12.1, DO NOT EDIT.
+// Code generated by goa v3.12.3, DO NOT EDIT.
 //
 // policy endpoints
 //
@@ -15,17 +15,19 @@ import (
 
 // Endpoints wraps the "policy" service endpoints.
 type Endpoints struct {
-	Evaluate goa.Endpoint
-	Lock     goa.Endpoint
-	Unlock   goa.Endpoint
+	Evaluate     goa.Endpoint
+	Lock         goa.Endpoint
+	Unlock       goa.Endpoint
+	ListPolicies goa.Endpoint
 }
 
 // NewEndpoints wraps the methods of the "policy" service with endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	return &Endpoints{
-		Evaluate: NewEvaluateEndpoint(s),
-		Lock:     NewLockEndpoint(s),
-		Unlock:   NewUnlockEndpoint(s),
+		Evaluate:     NewEvaluateEndpoint(s),
+		Lock:         NewLockEndpoint(s),
+		Unlock:       NewUnlockEndpoint(s),
+		ListPolicies: NewListPoliciesEndpoint(s),
 	}
 }
 
@@ -34,6 +36,7 @@ func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.Evaluate = m(e.Evaluate)
 	e.Lock = m(e.Lock)
 	e.Unlock = m(e.Unlock)
+	e.ListPolicies = m(e.ListPolicies)
 }
 
 // NewEvaluateEndpoint returns an endpoint function that calls the method
@@ -60,5 +63,14 @@ func NewUnlockEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*UnlockRequest)
 		return nil, s.Unlock(ctx, p)
+	}
+}
+
+// NewListPoliciesEndpoint returns an endpoint function that calls the method
+// "ListPolicies" of service "policy".
+func NewListPoliciesEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*PoliciesRequest)
+		return s.ListPolicies(ctx, p)
 	}
 }
